...
                children: [
                  const SizedBox(width: 8),

                  // Table
                  _toolButton(
                    icon: Icons.table_chart_outlined,
                    tooltip: "Insert Table",
                    onTap: onInsertTable,
                  ),
                  const SizedBox(width: 2),

                  // Aa Typography
                  InkWell(
...
